# wrapalloc

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README.rst  TODO  autogen.sh  common.mk  configure.ac
.github/workflows/: build.yaml
docs/: README.rst
man/: wrapalloc.3
src/: Makefile.am  Makefile.am.in  wa_list.c  wa_list.h  wa_util.c  wa_util.h  wrap_alloc.c  wrap_alloc.h  wrapalloc-0.1.pc.in
tests/: Makefile.am  check_wrapalloc.c  test_wrapalloc.c  test_wrapalloc.sh.in
